--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -533,7 +533,6 @@ In the exit survey, the users noted that they would use an interface like DataPa
 In this section, we first re-visit our study hypotheses introduced in Methodology, using observations from results to support views on each.  We follow this with a discussion of limitations regarding the design of the interface, the state of the prototype, and the design and execution of the study.  Finally, we discuss our current and follow-on plans for continuing this line of research.
 
 \subsection{Does DataPalette enable data integration?}
-
 We set out to test three hypotheses with the DataPalette study. The first was that end-user citizens would understand the interface mechanisms of DP (h1).  The second, h2, was that DP enables people to mix and integrate heterogeneous data in the process of performing their tasks.  The third, h3, was that using DP facilitated task completion (h3).  Using real data obtained from typical data sources identified during our pre-study (PS.1), we tested the DP prototype and its integration interaction mechanisms with ``real'' users, who were students, staff and alumni of our University who had varying backgrounds and levels of expertise with computers.
 
 We find substantial support for h1. All participants reported that they understood the tool, and that it was easy to use.   All participants managed to use the interface to view, organise and collate data without running into major roadblocks or confusion, and all effectively were able to compare multiple attributes of heterogeneous data items directly.  More than half of the participants used DP's visualisation features (charting or map) -- often several times during the trial -- suggesting that these features were useful and usable as well.  
@@ -602,9 +601,6 @@ Our study had several limitations.  First, the small sample size of our study (2
 %% Therefore, the uses that were using DataPalette were more confident in their choices, and knew exactly why they had chosen them,
 %% often pointing to the screens to show and verify each choice as they explained them.
 
-
-
-
 %What we found 
 %
 %What we didn't find (evidence for)
@@ -619,8 +615,23 @@ Our study had several limitations.  First, the small sample size of our study (2
 
 \section{Conclusions} %Key findings of the whole paper and its implications
 
-As said in Voltaire's poem \emph{La B\'{e}gueule}, ``the best is the enemy of the good'', we believe that the quest for complete approaches to data integration have, perhaps, caused ``ad-hoc'' approaches to be overlooked.  Based upon the results of our investigation, however, we see a number of benefits to lightweight, user-driven, interactive approaches over automatic and bespoke ones. Just as the \emph{user-subjective approach} to PIM \cite{user-subjective} showed that subjective attributes and labels were more useful than physical ones, we have shown that a user-driven approach to data integration, as achieved with DataPalette, affords users flexibility to combine and keep separate data at will, and may facilitate decision-making tasks.  Moreover, through our pre-studies and DataPalette evaluation, we have shown that much of heterogeneity exhibited by structured data feeds available on the Web today can be managed reasonably through easy to use, and intuitive interactive approaches for end-users. 
+As said in Voltaire's poem \emph{La B\'{e}gueule}, ``the best is the enemy of the good'', we believe that the quest for fully-automatic, complete approaches to data integration have casued simpler, manual approaches to be overlooked.  Based upon the results of our investigation, we see a number of benefits to interactive, lightweight approaches over automatic and bespoke methods, at least for several classes of common, information-gathering for decision-making tasks.  
 
+We believe that the key affordances for the suitability of such tools are flexibility, simplicity, and ease of use.  Just as work in the ``user-subjective approach'' to PIM (e.g., \cite{user-subjective}) showed that personal, user-specified attributes were ultimately the most useful, granting users the flexibility to combine or separate information items as needed allowed the tool to support the varied strategies participants employed to compare and examine their options. Second, the low cost of use  (in terms of time and effort required) meant that integration could be done (and undone) repeatedly within the ``inner loop'' of their exploratory decision-making process.  The importance of this was that it was the process itself that determined, incrementally, what information was ultimately needed, including the sources that were consulted. Therefore, the use of any integration approach that required sources to be determined \emph{a priori}, or that required a time or effort-intensive integration step would not have been feasible.
+
+Based on these findings, we plan to continue investigating lightweight, \emph{in-situ} approaches to supporting ad-hoc data integration during the course of sensemaking and decision-making activities.  In particular, we are examining gestural input methods for the purposes of supporting more fluid exploration and mixing.  Based upon feedback from reviewers, we have also begun considering semi-automatic and crowd-powered methods to help users quickly resolve challenging reconciliation problems they might encounter.
+
+% instead of being a separate step requiring pre-planning one that and that information sources could be brought in or rmeoved as needed.
+
+%% this study demonstrated that user-driven and-defined approach to information integration provided the flexibility to allow people to organize and support information gathering tasks in different ways.  The result, that  people weighed more factors from a greater number of information sources, while expending equal or less time and effort, demonstrated that such tools could broaden the information gathering capacities and allow people to make better use of available information sources during decision-making activities. 
+
+%% this was having a sufficiently low barrier of effort to use, provided both the flexibillity and facility to support information gathering tasks associated with decision-making activities.  The result was people weighed more factors from a greater number of information sources, broading the scope of their information gathering for such decisions, while expending comparable or less effort and time.
+
+%% Moreover, through our pre-studies and DataPalette evaluation, we have shown that much of heterogeneity exhibited by structured data feeds available on the Web today can be managed reasonably through easy to use, and intuitive interactive approaches for end-users. 
+
+\section{Acknowledgements} 
+
+The work presented in this paper was sponsored by the EPSRC project SOCIAM (Ref. EP/J017728/1).  We would like to thank our collaborators Wendy Hall, mc schraefel, Tim Berners-Lee, Kieron O'Hara, Susan Davies, Maraim Elbadri, Tom Smith, Yang Yang, Igor Popov, and Shauna VanKleek whose help and advice have shaped this work throughout.
 
 %% Just as the Italian in Voltaire's poem \emph{La Begueule} said ``the best is the enemy of the good'', we believe that the quest for complete approaches to data integration have perhaps caused less principled, ``ad-hoc'' approaches to be overlooked.  Based upon the results of our investigation, we see a number of benefits to lightweight, user-driven approaches to coping with heterogeneity over automatic and bespoke ones. Just as the \emph{user-subjective approach} to PIM \cite{user-subjective} showed that subjective labels and attributes were more useful than physical ones for files and folders, a user-controlled approach to data integration, where data may be combined (and separated) at will may benefit the sensemaking or decision-making process.   Towards this end, our results of our pre-studies and DataPalette show that, for a majority of the kinds of structured data feeds available on the Web today, the kinds of heterogeneity can be largely managed using simple interactive approaches that are intuitive and preceived as useful by end-users. 
 
