--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -366,11 +366,13 @@ In the control (B) condition trials, participants were given a web browser with 
 
 % why? why were these tasks selected? can we drop in the phrase ``multi-dimensional subjective choice task'' and refer back to PS.1 to justify the choice of tasks?
 
-We established that our two tasks would entail choosing a university and selecting a restaurant for a large social event.  These tasks were selected because in PS.1, the majority of people stated that they had used multiple websites for such tasks.  We introduced a variable for each task.  For the University selection task, we varied the course for which to select a University, between history and sports science, which we had selected randomly from the course list of the complete university guide\footnote{The Complete University Guide:\\\url{www.thecompleteuniversityguide.co.uk}}.  For the restaurant selection task, the variable selected where the restaurants were located; for this experiment, the cities Glasgow and Cambridge were chosen because they were geographically distant from participants, and would therefore minimise prior familiarity.  
+We established that our two tasks would entail choosing a university and selecting a restaurant for a large social event.  These tasks were selected because in PS.1, the majority of people stated that they had used multiple websites for such tasks.  We introduced a dependent \emph{dataset} variable for each task.  For the University selection task, this variable corresponded to the course for which to select a University, between history and sports science, and corresponding university candidates for each course.  For the restaurant selection task, the variable corresponded to the city and respective restaurants located therein; for this experiment, Glasgow and Cambridge were chosen because they were geographically distant from participants, and would therefore minimise prior familiarity.  
 
-For each of the two tasks, the final candidates from which participants made their selection were pre-selected by us.  For the university task, the six top-ranked universities for each subject according to The Complete University Guide were selected as candidates.  We selected six in order to limit the difficulty of the task given the fixd time allocated for each trial.  We manually collected the key statistics about each university from each of the data sources, and collated them into Excel spreadsheets.  % In addition, for each subject, we provided a hypothetical student's A/AS-level scores and personal preferences pertaining to distance from home, %% 
+For each of the two tasks, the final candidates from which participants made their selection were pre-selected by us.  For the university task, the six top-ranked universities for each subject according to The Complete University Guide were selected as candidates.  We selected six in order to limit the difficulty of the task given the fixd time allocated for each trial.  In addition, for each course, we provided participants with the profile of a hypothetical student applying to the course, for whom they should base their choice.  This profile included the student's entrance admissions tests scores (corresponding to A/AS-levels), location of the student's hometown, and personal preferences pertaining to how far they wanted to be from home, tuition they could afford, gender balance, and social-athletic-academic balance.
 
-For the restaurant task, we selected six restaurants for each location randomly from Yelp's list of popular eateries for each of the two cities.  In addition, for each of the two cities, we generated 12 social network profiles for hypothetical friends who lived in either city, to accompany the participant to the restaraunt.  Each friend's profile expressed their personal preferences for favourite cuisine types, which could be taken into consideration by participants during the selection process. 
+For the restaurant task, we selected six restaurants at random from Yelp's list of popular eateries for each of the two cities.  In addition, for each of the two cities, we generated 12 social network profiles for hypothetical friends who lived in either city, to accompany the participant to the restaraunt.  Each friend's profile expressed their street address and preference for favourite cuisine type which could be taken into consideration by participants during the venue selection process. 
+
+For the B conditions we prepared, for each dataset condition in each task, a spreadsheet listing key statistics for each of the relevant candidates (e.g., universities or restaurants) assembled from each of a pre-selected set of 6 popular data sources (university and restaurant guides), and collated them into Excel spreadsheets.  
 
 % We established that our two tasks would entail choosing a university and selecting a restaurant for a large social event.  These tasks were selected because in PS.1, the majority of people stated that they had used multiple websites for such tasks.  We used two different variables for each task.  where the restaurant was located (Glasgow and Cambridge) and which subject people chose (sport science and history).  For the restaurant task, the cities Glasgow and Cambridge were chosen because they were geographically distant to participants, and would therefore minimise likelihood of prior familiarity with the restaurants or location.  For the University selection task, two university courses were selected at random from the complete university guide\footnote{The Complete University Guide:\\\url{www.thecompleteuniversityguide.co.uk}}, and the six top-ranked universities for each subject were selected as candidates.  We selected six because it enables us to scope our study, we found through two pilot studies that six data sources provided a sufficient challenge for users to explore the data and required them to use DP's main features. We manually collected the key data points from the websites for use in DP and into Excel spreadsheets (which 40\% of the participants in PS.1 said that had previously used to compare data).
 
