Updated epsrc acknowledgement to standard form and added heather's EPSRC acknowledgement

--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -13,6 +13,8 @@
 %Copyright 2012 ACM 978-1-4503-1015-4/12/05...\$10.00.
 %}
 
+\hyphenation{EPSRC SOCIAM}
+
 \toappear{
 Permission to make digital or hard copies of all or part of this work for personal or classroom use is granted without fee provided that copies are not made or distributed for profit or commercial advantage and that copies bear this notice and the full citation on the first page. To copy otherwise, or republish, to post on servers or to redistribute to lists, requires prior specific permission and/or a fee.\\
 \emph{CHI 2013}, April 27--May 2, 2013, Paris, France.\\
@@ -633,7 +635,7 @@ Due to the promising findings of this study, we plan to continue investigating l
 
 \section{Acknowledgements} 
 
-The work presented in this paper was sponsored by the EPSRC project SOCIAM (Ref. EP/J017728/1).  We would like to thank our collaborators Wendy Hall, mc schraefel, Tim Berners-Lee, Kieron O'Hara, Susan Davies, Maraim Elbadri, Tom Smith, Yang Yang, Igor Popov, and Shauna VanKleek whose help and advice have shaped this work throughout.
+The work presented in this paper was supported by the SOCIAM project, funded by the Engineering and Physical Sciences Research Council under contract EP/J017728/1. Dr Packer is grateful for funding from the EPSRC in the form of a Post Doctoral Award.  We would like to thank our collaborators Wendy Hall, mc schraefel, Tim Berners-Lee, Kieron O'Hara, Susan Davies, Maraim Elbadri, Tom Smith, Yang Yang, Igor Popov, and Shauna VanKleek whose help and advice have shaped this work throughout.
 
 %% Just as the Italian in Voltaire's poem \emph{La Begueule} said ``the best is the enemy of the good'', we believe that the quest for complete approaches to data integration have perhaps caused less principled, ``ad-hoc'' approaches to be overlooked.  Based upon the results of our investigation, we see a number of benefits to lightweight, user-driven approaches to coping with heterogeneity over automatic and bespoke ones. Just as the \emph{user-subjective approach} to PIM \cite{user-subjective} showed that subjective labels and attributes were more useful than physical ones for files and folders, a user-controlled approach to data integration, where data may be combined (and separated) at will may benefit the sensemaking or decision-making process.   Towards this end, our results of our pre-studies and DataPalette show that, for a majority of the kinds of structured data feeds available on the Web today, the kinds of heterogeneity can be largely managed using simple interactive approaches that are intuitive and preceived as useful by end-users. 
 
